--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a system demonstrating a follow and unfollow logic in nodejs",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ahmed Bankole",
