project structure changes

--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "follow-system",
-  "version": "1.0.0",
-  "description": "a system demonstrating a follow and unfollow logic in nodejs",
+  "name": " referral-system",
+  "version": "1.0.1",
+  "description": "A referral system built with nodejs.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "author": "Ahmed Bankole",
+  "author": "Bankole Ahmed",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1",
-    "express-handlebars": "5.1.0",
-    "mongoose": "5.10.0",
-    "passport": "0.4.1",
-    "passport-local": "1.0.0"
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.1-alpha.3",
+    "express-handlebars": "^3.0.1",
+    "express-session": "^1.15.6",
+    "flash": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.4.15",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "uuid": "8.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
